--- a/src/main/resources/assets/moredoors/lang/en_us.json
+++ b/src/main/resources/assets/moredoors/lang/en_us.json
@@ -72,5 +72,5 @@
     "block.moredoors.dripstone_door":"Dripstone Door",
     "block.moredoors.dripstone_trapdoor":"Dripstone Trapdoor",
     
-    "itemGroup.moredoors.more_doors":"More Doors"
+    "itemGroup.moredoorstab":"More Doors"
 }
