--- a/src/main/resources/assets/moredoors/lang/en_us.json
+++ b/src/main/resources/assets/moredoors/lang/en_us.json
@@ -71,6 +71,8 @@
     "block.moredoors.sponge_trapdoor":"Sponge Trapdoor",
     "block.moredoors.dripstone_door":"Dripstone Door",
     "block.moredoors.dripstone_trapdoor":"Dripstone Trapdoor",
+    "block.moredoors.mud_brick_door":"Mud Brick Door",
+    "block.moredoors.mud_brick_trapdoor":"Mud Brick Trapdoor",
 
     "block.moredoors.black_stained_glass_door":"Black Stained Glass Door", 
     "block.moredoors.black_stained_glass_trapdoor":"Black Stained Glass Trapdoor",
