--- a/src/main/resources/assets/moredoors/lang/en_us.json
+++ b/src/main/resources/assets/moredoors/lang/en_us.json
@@ -36,7 +36,7 @@
     "block.moredoors.polished_deepslate_door":"Polished Deepslate Door",
     "block.moredoors.polished_deepslate_trapdoor":"Polished Deepslate Trapdoor",
     "block.moredoors.basalt_door":"Basalt Door",
-    "block.moredoors.basalt_trapdoor":"Basalt Trapoor",
+    "block.moredoors.basalt_trapdoor":"Basalt Trapdoor",
     "block.moredoors.blackstone_door":"Blackstone Door",
     "block.moredoors.blackstone_trapdoor":"Blackstone Trapdoor",
     "block.moredoors.netherrack_door":"Netherrack Door",
