--- a/src/main/resources/assets/moredoors/lang/en_us.json
+++ b/src/main/resources/assets/moredoors/lang/en_us.json
@@ -73,6 +73,8 @@
     "block.moredoors.dripstone_trapdoor":"Dripstone Trapdoor",
     "block.moredoors.mud_brick_door":"Mud Brick Door",
     "block.moredoors.mud_brick_trapdoor":"Mud Brick Trapdoor",
+    "block.moredoors.sculk_door":"Sculk Door",
+    "block.moredoors.sculk_trapdoor":"Sculk Trapdoor",
 
     "block.moredoors.black_stained_glass_door":"Black Stained Glass Door", 
     "block.moredoors.black_stained_glass_trapdoor":"Black Stained Glass Trapdoor",
