--- a/src/main/resources/assets/moredoors/lang/en_us.json
+++ b/src/main/resources/assets/moredoors/lang/en_us.json
@@ -36,7 +36,7 @@
     "block.moredoors.polished_deepslate_door":"Polished Deepslate Door",
     "block.moredoors.polished_deepslate_trapdoor":"Polished Deepslate Trapdoor",
     "block.moredoors.basalt_door":"Basalt Door",
-    "block.moredoors.basalt_trapdoor":"Basalt TrapDoor",
+    "block.moredoors.basalt_trapdoor":"Basalt Trapdoor",
     "block.moredoors.blackstone_door":"Blackstone Door",
     "block.moredoors.blackstone_trapdoor":"Blackstone Trapdoor",
     "block.moredoors.netherrack_door":"Netherrack Door",
@@ -61,11 +61,11 @@
     "block.moredoors.brick_trapdoor":"Brick Trapdoor",
     "block.moredoors.obsidian_door":"Obsidian Door",
     "block.moredoors.obsidian_trapdoor":"Obsidian Trapdoor",
-    "block.moredoors.ice_door":" Ice Door",
+    "block.moredoors.ice_door":"Ice Door",
     "block.moredoors.ice_trapdoor":"Ice Trapdoor",
     "block.moredoors.glass_door":"Glass Door",
     "block.moredoors.glass_trapdoor":"Glass Trapdoor",
-    "block.moredoors.bedrock_door":" Bedrock Door",
+    "block.moredoors.bedrock_door":"Bedrock Door",
     "block.moredoors.bedrock_trapdoor":"Bedrock Trapdoor",
     "block.moredoors.sponge_door":"Sponge Door",
     "block.moredoors.sponge_trapdoor":"Sponge Trapdoor",
@@ -105,8 +105,8 @@
     "block.moredoors.red_stained_glass_door":"Red Stained Glass Door", 
     "block.moredoors.red_stained_glass_trapdoor":"Red Stained Glass Trapdoor",
     "block.moredoors.white_stained_glass_door":"White Stained Glass Door", 
-    "block.moredoors.white_stained_glass_trapdoor":"White Stained  Trapdoor",
-    "block.moredoors.yellow_stained_glass_door":"YellowStained Glass Door", 
+    "block.moredoors.white_stained_glass_trapdoor":"White Stained Trapdoor",
+    "block.moredoors.yellow_stained_glass_door":"Yellow Stained Glass Door",
     "block.moredoors.yellow_stained_glass_trapdoor":"Yellow Stained Glass Trapdoor",
     "block.moredoors.tinted_glass_door":"Tinted Glass Door", 
     "block.moredoors.tinted_glass_trapdoor":"Tinted Glass Trapdoor",
